# chatStack

./: README.md  compile.sh  stackChat.cabal  start.sh
.stack-work/install/x86_64-osx/lts-9.8/8.0.2/flag-cache/: network-2.6.3.2-IsLM4TXcLoRI0fmmBYVyQz  stackChat-0.1.0.0
src/: Main.hs
stackChat/: stackChat.cabal
