name:                stackChat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/stackChat#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable stackChat
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, network
  default-language:    Haskell2010
