name:                stackChat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JenningsIRE/stackChat#readme
license:             BSD3
license-file:        LICENSE
author:              Sam Jennings
maintainer:          jennins@tcd.ie
copyright:           2017 Sam Jennings
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable stackChat
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, network
  default-language:    Haskell2010
